[workspace]
members = [
    "crates/tno-observe",
    "crates/tno-model",
    "crates/tno-core",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
taskvisor = { version = "0.0.10", features = ["controller"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
atty = "0.2"
