[workspace]
members = [
    "crates/tno-observe",
    "crates/tno-model",
    "crates/tno-core",
    "crates/tno-exec",
    "crates/tno-agentd",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
tracing-subscriber = { version = "0.3" }
tokio = { version = "1" }
tokio-util = "0.7.17"
time = { version = "0.3" }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
tracing-journald = "0.3.1"
taskvisor = { version = "0.0.11" }
async-trait = { version = "0.1" }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
anyhow  = "1"
