[workspace]
members = [
    "crates/tno-prometheus",
    "crates/tno-observe",
    "crates/tno-model",
    "crates/tno-core",
    "crates/tno-exec",
    "examples/agentd",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
tracing-subscriber = { version = "0.3" }
tokio = { version = "1" }
tokio-util = "0.7.17"
time = { version = "0.3" }
serde = { version = "1", features = ["derive"] }
tracing-journald = "0.3.1"
taskvisor = { version = "0.0.12" }
prometheus = "0.14.0"
async-trait = { version = "0.1" }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
anyhow  = "1"
libc = "0.2.177"
