[package]
name = "tno-agentd"
version = "0.0.1"
edition = "2024"

[dependencies]
tno-observe = { path = "../tno-observe", features = ["timezone-sync", "subscriber"] }
tno-exec    = { path = "../tno-exec", features = ["subprocess"] }
tno-core    = { path = "../tno-core" }
tno-model   = { path = "../tno-model" }

taskvisor  = { workspace = true }
tracing    = { workspace = true }
anyhow     = { workspace = true }
tokio      = { workspace = true }