[package]
name = "tno-exec"
version = "0.0.1"
edition = "2024"

[features]
default = []
subprocess = []

[dependencies]
tokio = { workspace = true, features = ["process"] }
tokio-util = { workspace = true }
taskvisor = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

tno-core = { path = "../tno-core" }
tno-model = { path = "../tno-model" }
libc = "0.2.177"
