[package]
name = "tno-exec"
version = "0.0.1"
edition = "2024"

[features]
default = []
subprocess = []

[dependencies]
tokio = { workspace = true, features = ["process", "io-util"] }
tokio-util = { workspace = true }
taskvisor = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }

tno-core = { path = "../tno-core" }
tno-model = { path = "../tno-model" }
